# Futures_Scalp_Analyzer

./: .gitignore  AGENTS.md  README.md  pyproject.toml  sync_to_gdrive.py
backend/: app.py  requirements.txt
backend/futures_scalp_analyzer/: __init__.py  apex.py  apex_cache.py  apex_dashboard.py  apex_pipeline.py  economic_calendar.py  market_analysis.py  models.py  news_context.py  price_feed.py  recommendations.py  risk.py  service.py  session_guard.py  symbols.py
docs/: APEX_DASHBOARD.md  APEX_SCALP_ENGINE_SPEC.md  Apex_Scalp_Engine_Expansion.MD  GPT_INSTRUCTIONS.md  api.md
tests/: test_apex_api.py  test_apex_cache.py  test_apex_dashboard.py  test_apex_pipeline.py  test_apex_platform.py  test_auto_direction.py  test_economic_calendar.py  test_news_context.py  test_price_endpoint.py  test_price_feed.py  test_recommendations.py  test_service.py  test_service_timeframe_bias.py  test_session.py  test_session_guard.py  test_symbols.py  test_timeframe_bias.py
